Not ready yet... but many changes made

--- a/fessen-backend/src/main/resources/application.properties
+++ b/fessen-backend/src/main/resources/application.properties
@@ -5,10 +5,10 @@ logging.level.org.springframework.web=DEBUG
 server.port=8091
 
 spring.h2.console.enabled=true
-spring.h2.console.path=/dishdb
+spring.h2.console.path=/fessendb
 spring.h2.console.settings.web-allow-others=true
 
-spring.datasource.url=jdbc:h2:file:~/dish;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:~/fessen;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
