familydateschedule works now as well

--- a/fessen-backend/src/main/resources/application.properties
+++ b/fessen-backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ### SERVER ###
 
 logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
 server.port=8091
 
@@ -15,3 +16,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 flyway.baseline-on-migrate=true
 spring.jpa.hibernate.ddl-auto=validate
+
+#prevents changing the time parsed from json to date object (I believe from UTC to CET)
+spring.jackson.time-zone=Europe/Zagreb
