Added login functionality plus some other stuff

--- a/fessen-backend/src/main/resources/application.properties
+++ b/fessen-backend/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 ### SERVER ###
 
+logging.file.name=/logs/fessen-backend.log
+logging.level.de.jan=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
-server.port=8091
+server.port=8050
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/fessendb
