--- a/fessen-backend/pom.xml
+++ b/fessen-backend/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.8</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.javassist</groupId>
+		    <artifactId>javassist</artifactId>
+		    <version>3.23.1-GA</version>
+		</dependency>		
 		<!-- API, java.xml.bind module -->
 		<dependency>
 		    <groupId>jakarta.xml.bind</groupId>
