--- a/fessen-backend/src/main/resources/application.properties
+++ b/fessen-backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ### SERVER ###
 
-logging.file.name=/logs/fessen-backend.log
+logging.file=/home/pi/apps/fessen/logs/fessen-backend.log
+logging.logback.rollingpolicy.max-history=30
 logging.level.de.jan=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
